--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://kukkurovaca.github.io
-title: I definitely needed another blog
-subtitle: Also: I have no idea what I'm doing
+title: I definitely needed another blog...
+subtitle: Also I have no idea what I'm doing
 author: Nick
 simple_search: http://google.com/search
 description: 
